# learngit

./: 2025rule.txt  readme.txt
week1/.cache/clangd/index/: main.cpp.2A9435088CB01DB7.idx  stock.cpp.9717988AB2D17AF0.idx  stock.hpp.C57A527C2425E33C.idx
week1/OOP_try/: CMakeLists.txt  readme.txt
week1/OOP_try/.cache/clangd/index/: adapter.hpp.841B40019D4EA1BE.idx  main.cpp.E5853CD8A3444D04.idx  specific_adapter.hpp.4CABB588C309268E.idx  specific_system.hpp.BE634E1582CC840F.idx  system.hpp.72656C4F1A945678.idx  system_factory.hpp.755D60C31EC8395F.idx  vehicle.hpp.F3E295A35806B496.idx
week1/OOP_try/include/: adapter.hpp  specific_adapter.hpp  specific_system.hpp  system.hpp  system_factory.hpp  vehicle.hpp
week1/OOP_try/src/: main.cpp
week1/codingtask/: CMakeLists.txt  week1.html  week1.mhtml
week1/codingtask/.cache/clangd/index/: main.cpp.20BEE3F74AA701E1.idx  stock.cpp.88C803040CA939D2.idx  stock.hpp.9E6911C3F0A41C2E.idx
week1/codingtask/include/: stock.hpp
week1/codingtask/src/: main.cpp  stock.cpp
week1/codingtask_/: CMakeLists.txt  Week1_.md
week1/codingtask_/.cache/clangd/index/: main.cpp.2D54643CF47F1969.idx  stock.cpp.C4E0B522E7900A2E.idx  stock.hpp.6695C12D4B6A70FB.idx
week1/codingtask_/include/: stock.hpp
week1/codingtask_/src/: main.cpp  stock.cpp
week1/oop_try2/: CMakeLists.txt
week1/oop_try2/.cache/clangd/index/: main.cpp.3CCF141498B0394C.idx  vehicle.cpp.EA8236E15AA7FF91.idx
week1/oop_try2/include /: input.hpp  system.hpp  vehicle.cpp
week1/oop_try2/src/: main.cpp
week1/tongshi task/: tongshi.md
